--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ask-queies",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,8 +13,9 @@
     "env": "^0.0.2",
     "ether.js": "^1.0.0",
     "ethers": "^6.13.5",
+    "express.js": "^1.0.0",
+    "mongoose": "^8.9.5",
     "node.js": "^0.0.1-security",
-    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
