--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
     "ether.js": "^1.0.0",
     "ethers": "^6.13.5",
+    "express": "^4.21.2",
     "express.js": "^1.0.0",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.9.6",
     "node.js": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,5 +33,10 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
-  }
+  },
+  "description": "1. Products Table: ProductID (Primary Key) Manufacturer ManufactureDate ExpiryDate BlockchainAddress (linking to transaction data)",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
